objects/vlocity_cmt__QuoteAsyncOperationEvent__e.object
<CustomObject>
    <description>Requests an asynchronous operation to run on the requested quote, optionally on a specific quote item bundle.</description>
    <fields>
        <fullName>vlocity_cmt__AsyncOperationData__c</fullName>
        <description>Additional data that is useful or necessary to the requested asynchronous operation.</description>
        <label>Async Operation Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AsyncOperation__c</fullName>
        <description>The type of asynchronous operation requested.</description>
        <label>Async Operation</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QuoteId__c</fullName>
        <description>Id of the quote on which the asynchronous operation needs to occur (required).</description>
        <label>Quote</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QuoteItemId__c</fullName>
        <description>Id of the quote item on which the asynchronous operation needs to occur (when relevant).</description>
        <label>Quote Line Item</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Quote Asynchronous Operation Event</label>
    <pluralLabel>Quote Asynchronous Operation Events</pluralLabel>
</CustomObject>